fix slider image too big issues

--- a/app/styles/sb-admin-2.css
+++ b/app/styles/sb-admin-2.css
@@ -358,72 +358,6 @@ table.dataTable thead .sorting:after {
 
 
 
-/*==========new blog=======*/
-
-.create-new-blog-section > .new-blog-title{
-    font-size: 20px;
-    padding:8px 10px;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.dropdown-menu a{
-
-    display: block;
-    padding: 3px 20px;
-    clear: both;
-    font-weight: 400;
-    line-height: 1.42857143;
-    color: #333;
-    white-space: nowrap;
-    cursor: pointer;
-    text-decoration: none;
-
-}
-
-.dropdown-menu a:hover{
-
-    color: #262626;
-    text-decoration: none;
-    background-color: #f5f5f5;
-
-}
-
-.set-feature-image{
-    max-width: 600px;
-    max-height: 400px;
-    display: block;
-    margin:10px;
-}
-
-
-
-.note-editor .note-editable{
-    min-height: 500px;
-}
-
-
-
-
-
-/*========================pop up===============================*/
-
-
-.pop-up-bg{
-    top: 0;
-    left: 0;
-    position: fixed;
-    z-index: 1000;
-    background-color: rgba(255,255,255,.8);
-    height: 100%;
-    width: 100%;
-}
-
-
-
-
-
-
 
 
 /*================================spinner css========================================*/
@@ -580,6 +514,74 @@ table.dataTable thead .sorting:after {
 
 
 
+/*============================================CUSTOME HERE ON THE BOTTOM===============================*/
+
+
+
+/*==========new blog=======*/
+
+.create-new-blog-section > .new-blog-title{
+    font-size: 20px;
+    padding:8px 10px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.dropdown-menu a{
+
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+    cursor: pointer;
+    text-decoration: none;
+
+}
+
+.dropdown-menu a:hover{
+
+    color: #262626;
+    text-decoration: none;
+    background-color: #f5f5f5;
+
+}
+
+.set-feature-image{
+    max-width: 600px;
+    max-height: 400px;
+    display: block;
+    margin:10px;
+}
+
+
+
+.note-editor .note-editable{
+    min-height: 500px;
+}
+
+
+
+
+
+.pop-up-bg{
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 1000;
+    background-color: rgba(255,255,255,.8);
+    height: 100%;
+    width: 100%;
+}
+
+
+
+.slice-thumbnail{
+    max-width: 400px;
+    max-height: 400px;
+}
 
 
 
